<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projet</name>
  <version>1.0.0</version>
  <description>
    ENSAM ROS2 Project – TurtleBot3 Burger navigation challenges.
    Three successive challenges: corridor (LiDAR), line following (camera),
    and yellow-ball pushing (camera). Bonus: full autonomous run.
  </description>
  <maintainer email="dev@dev-kumar.com">Dev Kumar</maintainer>
  <license>Apache 2.0</license>

  <!-- ROS2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Python deps (system packages in ROS2 docker) -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <!-- launch deps -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- challenge_project provides the Gazebo world + robot -->
  <exec_depend>challenge_project</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
